Added new elements into nav-bar

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 	<div class="backgound-image">
 		<!-- Header section while using bootstrap with nawbar -->
 		<header>
-			<div class="container">
-			  <nav class="nawbar">
-			  	<h1><a href="">Modernist</a></h1>
-			  	
+			<div class="container-fluid">
+			  <nav class="nawbar d-flex justify-content-between">
+			  	<div class="navbar-header">
+			  		<h1 class="navbar-brand"><a href="">Modernist</a></h1>
+			  	</div>
+			  	<ul class="nav navbar-nav d-flex flex-row mb-3">
+			  		<li class="p-2 nav-item"><a class="nav-link" href="#">Home</a></li>
+			  		<li class="p-2 active nav-item"><a class="nav-link" href="#">Join Us</a></li>
+			  		<li class="p-2 nav-item"><a class="nav-link" href="#">Abaut Us</a></li>
+			  	</ul>
 			  </nav>
 			</div>
 		</header>
